--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 crossterm = { version = "0.28.1", features = ["event-stream"] }
 futures = "0.3.31"
+nucleo = "0.5.0"
 ratatui = "0.29.0"
 thiserror = "2.0.11"
 tokio = { version = "1.40.0", features = ["full"] }
